k8s/util-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: util-service
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: util-service
  template:
    metadata:
      labels:
        app: util-service
    spec:
      serviceAccountName: employee-ksa
      containers:
      - name: util-service
        image: asia-east1-docker.pkg.dev/cathay-prob/cathay-prob-backend/util-service:latest
        ports:
        - containerPort: 8081
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store-gke.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "gcp-secrets"
---
apiVersion: v1
kind: Service
metadata:
  name: util-service
  namespace: my-app
spec:
  selector:
    app: util-service
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
