k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /()(.*)
        pathType: Prefix
        backend:
          service:
            name: angular-frontend
            port:
              number: 80
      - path: /api/employee(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: employee-service
            port:
              number: 80
